--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#bbccaa" />
+            android:background="#a7aea0" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
