--- a/app/src/main/res/layout/index_item.xml
+++ b/app/src/main/res/layout/index_item.xml
@@ -3,12 +3,12 @@
     android:layout_margin="8dp"
     android:id="@+id/index_item_root_view"
     android:orientation="vertical"
-    android:background="@android:color/holo_purple"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@android:color/white"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height= "wrap_content"
         android:adjustViewBounds="true"
         android:maxHeight="354dp"
@@ -16,7 +16,7 @@
         android:id="@+id/index_item_image" />
     <TextView
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/index_item_title" />
 
