基本功能完成

--- a/app/src/main/res/layout/ac_complex.xml
+++ b/app/src/main/res/layout/ac_complex.xml
@@ -6,6 +6,9 @@
 
 	<android.support.v4.view.PagerTitleStrip
 		android:id="@+id/pager_title_strip"
+		android:backgroundTint="@color/colorPrimary"
+		android:background="@color/colorPrimary"
+		android:foregroundTint="@color/avoscloud_feedback_white"
 		android:layout_width="match_parent"
 		android:layout_height="30dp"
 		android:layout_gravity="top"
